import "aurora/entity_types.proto";
import "aurora/presence_types.proto";
import "aurora/rpc_types.proto";

package blizzard.protocol.presence.v1;

option cc_generic_services = false;

message SubscribeRequest {
	optional .blizzard.protocol.EntityId agent_id = 1;
	required .blizzard.protocol.EntityId entity_id = 2;
	required uint64 object_id = 3;
	repeated fixed32 program = 4 [(valid).repeated.size.min = 1, (valid).repeated.size.max = 100];
	repeated .blizzard.protocol.presence.v1.FieldKey key = 6 [(valid).repeated.size.min = 1, (valid).repeated.size.max = 500];
}

message SubscribeNotificationRequest {
	required .blizzard.protocol.EntityId entity_id = 1;
}

message UnsubscribeRequest {
	optional .blizzard.protocol.EntityId agent_id = 1;
	required .blizzard.protocol.EntityId entity_id = 2;
	optional uint64 object_id = 3;
}

message UpdateRequest {
	required .blizzard.protocol.EntityId entity_id = 1;
	repeated .blizzard.protocol.presence.v1.FieldOperation field_operation = 2;
	optional bool no_create = 3;
	optional .blizzard.protocol.EntityId agent_id = 4;
}

message QueryRequest {
	required .blizzard.protocol.EntityId entity_id = 1;
	repeated .blizzard.protocol.presence.v1.FieldKey key = 2;
	optional .blizzard.protocol.EntityId agent_id = 3;
}

message QueryResponse {
	repeated .blizzard.protocol.presence.v1.Field field = 2;
}

message OwnershipRequest {
	required .blizzard.protocol.EntityId entity_id = 1;
	optional bool release_ownership = 2;
}

message BatchSubscribeRequest {
	optional .blizzard.protocol.EntityId agent_id = 1;
	repeated .blizzard.protocol.EntityId entity_id = 2 [(valid).repeated.size.min = 1, (valid).repeated.size.max = 250];
	repeated fixed32 program = 3 [(valid).repeated.size.min = 1, (valid).repeated.size.max = 100];
	repeated .blizzard.protocol.presence.v1.FieldKey key = 4 [(valid).repeated.size.min = 1, (valid).repeated.size.max = 500];
	optional uint64 object_id = 5;
}

message SubscribeResult {
	optional .blizzard.protocol.EntityId entity_id = 1;
	optional uint32 result = 2;
}

message BatchSubscribeResponse {
	repeated .blizzard.protocol.presence.v1.SubscribeResult subscribe_failed = 1;
}

message BatchUnsubscribeRequest {
	optional .blizzard.protocol.EntityId agent_id = 1;
	repeated .blizzard.protocol.EntityId entity_id = 2 [(valid).repeated.size.min = 1, (valid).repeated.size.max = 250];
	optional uint64 object_id = 3;
}

service PresenceService {
	option (service_options).descriptor_name = "bnet.protocol.presence.PresenceService";
	option (service_options).shard_name = "presence";
	option (sdk_service_options).outbound = true;
	rpc Subscribe (.blizzard.protocol.presence.v1.SubscribeRequest) returns (.blizzard.protocol.NoData) {
		option (method_options).id = 1;
	}
	rpc Unsubscribe (.blizzard.protocol.presence.v1.UnsubscribeRequest) returns (.blizzard.protocol.NoData) {
		option (method_options).id = 2;
	}
	rpc Update (.blizzard.protocol.presence.v1.UpdateRequest) returns (.blizzard.protocol.NoData) {
		option (method_options).id = 3;
	}
	rpc Query (.blizzard.protocol.presence.v1.QueryRequest) returns (.blizzard.protocol.presence.v1.QueryResponse) {
		option (method_options).id = 4;
	}
	rpc Ownership (.blizzard.protocol.presence.v1.OwnershipRequest) returns (.blizzard.protocol.NoData) {
		option (method_options).id = 5;
	}
	rpc SubscribeNotification (.blizzard.protocol.presence.v1.SubscribeNotificationRequest) returns (.blizzard.protocol.NoData) {
		option (method_options).id = 7;
	}
	rpc BatchSubscribe (.blizzard.protocol.presence.v1.BatchSubscribeRequest) returns (.blizzard.protocol.presence.v1.BatchSubscribeResponse) {
		option (method_options).id = 8;
	}
	rpc BatchUnsubscribe (.blizzard.protocol.presence.v1.BatchUnsubscribeRequest) returns (.blizzard.protocol.NoData) {
		option (method_options).id = 9;
	}
}

